--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,1 +1,15 @@
+// variable
+
+$oswald: 'Oswald', Arial,sans-serif;
+$roboto: 'Roboto', Arial, sans-serif;
+
+$color-prime: #005bab;
+$background: #22242d;
+$background-opacity: rgba(34, 36, 45, 0.4);
+
+// fonts
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
+
+// files
 @import 'normalize.css/normalize';
+@import '_header.scss';
