--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -6,6 +6,8 @@ $roboto: 'Roboto', Arial, sans-serif;
 $color-prime: #005bab;
 $background: #22242d;
 $background-opacity: rgba(34, 36, 45, 0.6);
+$background-body: #16171d;
 
 $breackpoint-md: 840px;
 $breackpoint-sm: 540px;
+$breackpoint-mini: 320px;
