--- a/app/scss/_choose-us-media.scss
+++ b/app/scss/_choose-us-media.scss
@@ -64,7 +64,7 @@
             right: 0;
             font-size: 18px;
             transform: translateY(150px);
-            padding: 0 20px;
+            padding: 20px 20px;
           }
         }
       }
