--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -8,6 +8,7 @@ $background: #22242d;
 $background-opacity: rgba(34, 36, 45, 0.6);
 $background-body: #16171d;
 
+$breackpoint-xl: 1024px;
 $breackpoint-md: 840px;
 $breackpoint-sm: 540px;
 $breackpoint-mini: 320px;
