--- a/app/scss/_choose-us.scss
+++ b/app/scss/_choose-us.scss
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  height: auto;
   .wrapper {
     display: flex;
     flex-direction: column;
     max-width: 1200px;
     width: 100%;
-    height: 100vh;
     margin: 0 20px;
     .block-desc {
       display: flex;
