--- a/app/scss/_slider.scss
+++ b/app/scss/_slider.scss
@@ -7,7 +7,9 @@
     flex-direction: column;
     max-width: 1200px;
     width: 100%;
-    margin: 40px 20px;
+    box-sizing: border-box;
+    margin: 40px 0px;
+    padding: 0 20px;
     .swiper {
       width: 100%;
       &-wrapper {
