--- a/app/scss/_slider.scss
+++ b/app/scss/_slider.scss
@@ -8,8 +8,8 @@
     max-width: 1200px;
     width: 100%;
     box-sizing: border-box;
-    margin: 40px 0px;
-    padding: 0 20px;
+    margin: 40px 0;
+    // padding: 0 20px;
     .swiper {
       width: 100%;
       &-wrapper {
@@ -24,6 +24,14 @@
           }
         }
       }
+    }
+  }
+}
+
+@include laptop {
+  .slider {
+    .wrapper {
+      padding: 0 20px;
     }
   }
 }
