--- a/app/scss/_primary.scss
+++ b/app/scss/_primary.scss
@@ -8,8 +8,8 @@
     position: absolute;
     z-index: -1;
     object-fit: cover;
+    width: 100%;
     height: 100vh;
-    width: 100vw;
   }
 
   .wrapper {
