--- a/app/scss/_production.scss
+++ b/app/scss/_production.scss
@@ -36,10 +36,15 @@
           border: 1px solid #222;
           padding: 22px;
           margin: 0;
-          cursor: default;
+          cursor: pointer;
           transition: all 0.4s ease-in-out;
+          user-select: none;
+          &--active {
+            background-color: $color-prime;
+          }
           &:hover {
             background-color: $color-prime;
+            opacity: 0.7;
           }
           &:first-child {
             border-radius: 4px 0 0 4px;
@@ -55,6 +60,7 @@
           
           &--active {
             display: block;
+            // background-color: $color-prime;
           }
         }
       }
