--- a/app/scss/_production.scss
+++ b/app/scss/_production.scss
@@ -8,7 +8,7 @@
     max-width: 1200px;
     width: 100%;
     box-sizing: border-box;
-    margin: 40px 0;
+    margin: 40px 20px;
     .production__title {
       font-size: 46px;
       font-family: $oswald;
@@ -19,6 +19,9 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      // select.tabs__head {
+      //   display: none;
+      // }
       // justify-content: space-between;
       &__head {
         display: flex;
@@ -41,7 +44,11 @@
           user-select: none;
           &--active {
             background-color: $color-prime;
+             &:hover,.tabs__title:hover {
+              opacity: 1 !important;
+            }
           }
+          
           &:hover {
             background-color: $color-prime;
             opacity: 0.7;
