--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -51,25 +51,50 @@
     }
     .contacts {
       display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      &__link {
-        text-decoration: none;
-        color: #fff;
-        font-family: $roboto;
-        font-size: 24px;
-        line-height: 1.5;
-        font-weight: 500;
-        transition: all 0.2s ease-out;
-        &:hover {
-          color: $color-prime;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-end;
+      gap: 10px;
+      &__wrap {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        // height: 100%;
+        .contacts__link {
+          display: flex;
+          align-items: center;
+          text-decoration: none;
+          color: #fff;
+          font-family: $roboto;
+          font-size: 24px;
+          line-height: 1.5;
+          font-weight: 500;
+          transition: all 0.2s ease-out;
+          height: 30px;
+
+          &:hover {
+            color: $color-prime;
+          }
+          &--mail {
+            font-size: 16px;
+          }
         }
-        &--mail {
-          font-size: 16px;
+      }
+      .icons {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        &__link {
+          width: 30px;
+          height: 30px;
+          .icons__img {
+            width: 100%;
+          }
         }
       }
     }
-    .burger{
+    .burger {
       display: none;
     }
   }
