--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,6 +25,8 @@
 @import './production';
 @import './production-media';
 
+@import './request';
+
 body {
   background-color: $background-body;
   color: #fff;
