--- a/app/scss/_production-media.scss
+++ b/app/scss/_production-media.scss
@@ -11,7 +11,6 @@
             // display: none;
             &--active {
               // display: block;
-
             }
             &:first-child {
               border-radius: 4px 4px 0 0;
@@ -44,7 +43,7 @@
             }
             .infoblocks {
               flex-wrap: wrap;
-              gap: 0;
+              gap: 20px;
             }
           }
         }
