--- a/app/scss/_production.scss
+++ b/app/scss/_production.scss
@@ -95,16 +95,21 @@
           .infoblocks {
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
             gap: 40px;
+            margin-top: 60px;
+
             .infoblock {
               display: flex;
               flex-direction: column;
-              margin-top: 60px;
               padding: 25px;
               border-radius: 4px;
               background-color: $background;
               gap: 20px;
               transition: all 0.4s ease-in-out;
+              flex-grow: 1;
+              flex-basis: 0;
+              width: 250px;
               &:hover {
                 border-radius: 4px;
                 background-color: $color-prime;
