--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,7 +7,6 @@
 @import './media_breackpoints.scss';
 
 // blocks
-
 @import './header';
 @import './header-media';
 
@@ -26,6 +25,7 @@
 @import './production-media';
 
 @import './request';
+@import './request-media';
 
 body {
   background-color: $background-body;
