--- a/app/scss/_production.scss
+++ b/app/scss/_production.scss
@@ -109,7 +109,7 @@
               transition: all 0.4s ease-in-out;
               flex-grow: 1;
               flex-basis: 0;
-              width: 250px;
+              min-width: 170px;
               &:hover {
                 border-radius: 4px;
                 background-color: $color-prime;
