--- a/app/scss/_choose-us-media.scss
+++ b/app/scss/_choose-us-media.scss
@@ -48,8 +48,8 @@
       // height: 100vh;
       // position: relative;
       .block-desc {
-        min-height: 50vh;
-        position: relative;
+        min-height: 70vh;
+        // position: relative;
         .block-img {
           align-items: flex-start;
         }
