--- a/app/scss/_request-media.scss
+++ b/app/scss/_request-media.scss
@@ -1,11 +1,15 @@
 @include tablet {
   .request {
     .wrapper {
+      flex-direction: column;
+      .title-box {
+        width: 70%;
+      }
       .form {
         // gap: 20px;
         // flex-wrap: wrap;
         flex-direction: column;
-        
+        margin-top: 0;
         width: 70%;
         &__input {
           padding-right: 0;
@@ -23,8 +27,10 @@
 @include mobile {
   .request {
     .wrapper {
+      .title-box {
+        width: 100%;
+      }
       .form {
-
         width: 100%;
         // &__input {
         //   padding-right: 0;
