--- a/app/scss/_request.scss
+++ b/app/scss/_request.scss
@@ -4,41 +4,52 @@
   width: 100%;
   .wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     max-width: 1200px;
     width: 100%;
     box-sizing: border-box;
     margin: 40px 20px;
-    .request__title {
-      font-size: 46px;
-      font-family: $oswald;
-      line-height: 1.50;
-      font-weight: 400;
-    }
-    .request__subtitle {
-      color: #ffffff;
-      font-size: 18px;
-      font-family: $roboto;
-      line-height: 1.56;
-      font-weight: 400;
-      opacity: 0.8;
+    gap: 40px;
+    .title-box {
+      width: 50%;
+      padding-right: 50px;
+      box-sizing: border-box;
+      &__title {
+        font-size: 46px;
+        font-family: $oswald;
+        line-height: 1.50;
+        font-weight: 400;
+      }
+      &__subtitle {
+        color: #ffffff;
+        font-size: 18px;
+        font-family: $roboto;
+        line-height: 1.56;
+        font-weight: 400;
+        opacity: 0.8;
+      }
     }
     .form {
       display: flex;
+      flex-direction: column;
       // flex-wrap: wrap;
       gap: 60px;
       margin-top: 50px;
+      width: 50%;
+      box-sizing: border-box;
       &__input {
         color: rgba(255, 255, 255, 0.7);
         font-size: 16px;
         font-family: $roboto;
-        width: 25%;
+        width: 100%;
         padding: 20px;
-        padding-left: 0;
+        // padding-left: 0;
+        padding-right: 0;
         line-height: 1.33;
         border: 0;
         border-bottom: 1px solid #fff;
         background: transparent;
+        box-sizing: border-box;
       }
       &__submit {
         color: #fff;
@@ -50,8 +61,8 @@
         background-color: transparent;
         font-size: 16px;
         cursor: pointer;
-        padding-left: 60px;
-        padding-right: 60px;
+        padding: 20px;
+        width: 250px;
         transition: all 0.4s ease-in-out;
         &:hover {
           border: 2px solid $color-prime;
@@ -63,13 +74,15 @@
       }
     }
     .request__rules {
-      margin-top: 30px;
+      // margin-top: 10px;
       font-family: $roboto;
       font-weight: 400;
       color: #fff;
       font-size: 14px;
       opacity: 0.8;
-      line-height: 1.55;
+      // line-height: 1.55;
+      margin: 0;
+      padding: 0;
     }
   }
 }
