--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -27,6 +27,8 @@
 @import './request';
 @import './request-media';
 
+@import './contacts';
+
 body {
   background-color: $background-body;
   color: #fff;
