--- a/app/scss/_slider.scss
+++ b/app/scss/_slider.scss
@@ -18,6 +18,8 @@
           // display: flex;
           width: 100%;
           // padding: 0 5%;
+          border-radius: 4px;
+          background-color: $background;
           img {
             border-radius: 4px;
             width: 100%;
