--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -29,6 +29,9 @@
 
 @import './contacts';
 
+@import './footer';
+@import './footer-media';
+
 body {
   background-color: $background-body;
   color: #fff;
