--- a/app/scss/_contacts.scss
+++ b/app/scss/_contacts.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   width: 100%;
   height: auto;
+  margin-bottom: 100px;
   .wrapper {
     display: flex;
     flex-direction: column;
@@ -11,20 +12,20 @@
     margin: 0 20px;
     .contacts__title {
       font-family: $oswald;
-      line-height: 1.50;
+      line-height: 1.5;
       font-weight: 500;
       font-size: 46px;
     }
     .adress-box {
       &__title {
         font-family: $oswald;
-        line-height: 1.50;
+        line-height: 1.5;
         font-weight: 500;
         font-size: 36px;
       }
       &__desc {
         font-family: $roboto;
-        line-height: 1.50;
+        line-height: 1.5;
         font-weight: 400;
         font-size: 30px;
       }
@@ -32,9 +33,28 @@
     .contact-us {
       &__title {
         font-family: $oswald;
-        line-height: 1.50;
+        line-height: 1.5;
         font-weight: 500;
         font-size: 36px;
+      }
+      &__desc {
+        font-size: 18px;
+        font-family: $roboto;
+        line-height: 1.56;
+        font-weight: 400;
+        opacity: 0.8;
+        padding-bottom: 20px;
+      }
+      &__wrap {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 50px;
+        .contact-us__link {
+          color: #fff;
+          font-size: 24px;
+          font-family: $roboto;
+        }
       }
     }
   }
