--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -32,6 +32,8 @@
 @import './footer';
 @import './footer-media';
 
+@import './burger';
+
 body {
   background-color: $background-body;
   color: #fff;
