--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -49,7 +49,7 @@
         }
       }
     }
-    .contacts {
+    .contacts,.contacts-visible {
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -95,8 +95,8 @@
         }
       }
     }
-    .burger {
-      display: none;
-    }
+    // .burger {
+    //   display: none;
+    // }
   }
 }
