--- a/app/scss/_request-media.scss
+++ b/app/scss/_request-media.scss
@@ -37,9 +37,9 @@
         //   width: 100%;
         //   min-width: 250px;
         // }
-        // &__submit {
-        //   height: 60px;
-        // }
+        &__submit {
+          width: 100%;
+        }
       }
     }
   }
