--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  box-sizing: border-box;
   padding: 10px 0;
   background-color: $background-opacity;
   z-index: 99;
