--- a/app/scss/_contacts.scss
+++ b/app/scss/_contacts.scss
@@ -30,6 +30,28 @@
         font-size: 30px;
       }
     }
+    .contacts__button {
+      display: inline-block;
+      width: fit-content;
+      margin-bottom: 30px;
+      padding: 15px 30px;
+      color: #ffffff;
+      appearance: none;
+      font-size: 16px;
+      font-family: $oswald;
+      line-height: 1.5;
+      font-weight: 600;
+      text-transform: uppercase;
+      border-radius: 4px;
+      border: 2px solid #fff;
+      background-color: transparent;
+      transition: all 0.2s ease-in-out;
+      cursor: pointer;
+      &:hover {
+        border-color: $color-prime;
+        background-color: $color-prime;
+      }
+    }
     .contact-us {
       &__title {
         font-family: $oswald;
