--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -75,11 +75,12 @@
       flex-direction: row;
       align-items: center;
       justify-content: flex-end;
-      gap: 10px;
+      gap: 20px;
       margin-bottom: 0;
       &__wrap {
         display: flex;
         flex-direction: column;
+        align-items: flex-end;
         gap: 10px;
 
         // height: 100%;
@@ -111,8 +112,8 @@
         flex-direction: column;
         gap: 10px;
         &__link {
-          width: 30px;
-          height: 30px;
+          width: 40px;
+          height: 40px;
           .icons__img {
             width: 100%;
           }
