fix: favicon path

--- a/app/scss/_primary-media.scss
+++ b/app/scss/_primary-media.scss
@@ -44,3 +44,14 @@
     }
   }
 }
+
+@media (max-width: 540px) and (orientation: landscape) {
+  .primary {
+    .wrapper {
+      margin: 0 20px;
+      .content {
+        margin-top: 150px;
+      }
+    }
+  }
+}
